platter-compiler-sveltejs/static/python/tests/syntax_programs/invalid_tests/test_script_3.platter
# flag of a = (x + "hello") > 1;  not invalid syntactically in after 1st defense cfg
# start() {}